force-app/src/objects/c2g__AllocationRule__c.object
<CustomObject>
    <customHelpPage>c2g__helpallocationrule</customHelpPage>
    <description>Stores distribution criteria for allocations.</description>
    <fields>
        <fullName>c2g__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Allocation Rules</relationshipLabel>
        <relationshipName>AllocationRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DistributionFields__c</fullName>
        <label>Distribution Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>General Ledger Account</fullName>
                </value>
                <value>
                    <fullName>Dimension 1</fullName>
                </value>
                <value>
                    <fullName>Dimension 2</fullName>
                </value>
                <value>
                    <fullName>Dimension 3</fullName>
                </value>
                <value>
                    <fullName>Dimension 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__IncludeDisabledDimensions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the disabled dimensions are included in the drop-down list of dimension fields in the Rule Criteria tab.</description>
        <inlineHelpText>If selected, the disabled dimensions are included in the drop-down list of dimension fields in the Rule Criteria tab.</inlineHelpText>
        <label>Include Disabled Dimensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IsLocal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__StatisticalBasis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation Basis</label>
        <referenceTo>c2g__StatisticalBasis__c</referenceTo>
        <relationshipLabel>Allocation Rules</relationshipLabel>
        <relationshipName>StatisticalBases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TotalDistributedPercentage__c</fullName>
        <label>Total Fixed Allocation Percentage</label>
        <summarizedField>c2g__FixedAllocationRuleLine__c.c2g__Split__c</summarizedField>
        <summaryForeignKey>c2g__FixedAllocationRuleLine__c.c2g__AllocationRule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Allocation Rule</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Description__c</columns>
        <columns>c2g__StatisticalBasis__c</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__Active__c</columns>
        <columns>c2g__TotalDistributedPercentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation Rules</pluralLabel>
    <recordTypes>
        <fullName>c2g__Fixed</fullName>
        <active>true</active>
        <description>Use set percentages or amounts as the basis for the allocation.</description>
        <label>Fixed</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__Statistical</fullName>
        <active>true</active>
        <description>Use a set of statistical values as the basis of your allocation.</description>
        <label>Statistical</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>